new changes added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,6 +11,60 @@
 <body>
     <!-- started here navbar -->
     <header>
+        <nav>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
         </nav>
@@ -35,7 +89,9 @@
 
 
 
-    </header>
 
+
+
+    </header>
 
 </html>
