contact.css added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./../css/contact.css">
     <title>the news reporter</title>
 </head>
 
@@ -13,7 +14,8 @@
     <header>
         <nav>
 
-
+            </div>
+        </nav>
 
 
 
