--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,6 +14,12 @@
     <header>
         <nav>
             <div class="top-navbar">
+                <div>
+                    <h4>The</h4>
+
+
+                </div>
+
 
 
 
