heading and span tag added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,6 +16,7 @@
             <div class="top-navbar">
                 <div>
                     <h4>The</h4>
+                    <h2><span class="heading-fisrt">News</span> Reporter</h2>
 
 
                 </div>
