class top-nav-list added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -20,6 +20,12 @@
 
 
                 </div>
+                <div>
+                    <ul class="top-nav-list">
+
+
+
+                </div>
 
 
 
