list home added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -22,6 +22,7 @@
                 </div>
                 <div>
                     <ul class="top-nav-list">
+                        <li><a href="#">Home</a></li>|
 
 
 
