--- a/pages/contact.html
+++ b/pages/contact.html
@@ -23,6 +23,7 @@
                 <div>
                     <ul class="top-nav-list">
                         <li><a href="#">Home</a></li>|
+                        <li><a href="">About</a></li>|
 
 
 
