--- a/pages/contact.html
+++ b/pages/contact.html
@@ -24,6 +24,7 @@
                     <ul class="top-nav-list">
                         <li><a href="#">Home</a></li>|
                         <li><a href="">About</a></li>|
+                        <li><a href="">Contact</a></li>|
 
 
 
