--- a/pages/contact.html
+++ b/pages/contact.html
@@ -25,6 +25,7 @@
                         <li><a href="#">Home</a></li>|
                         <li><a href="">About</a></li>|
                         <li><a href="">Contact</a></li>|
+                        <li><a href="">Login</a></li>
 
 
 
