--- a/pages/contact.html
+++ b/pages/contact.html
@@ -26,10 +26,17 @@
                         <li><a href="">About</a></li>|
                         <li><a href="">Contact</a></li>|
                         <li><a href="">Login</a></li>
+                    </ul>
+
+
+                </div>
+                <div class="top-nav-icons">
+
 
 
 
                 </div>
+
 
 
 
