--- a/pages/contact.html
+++ b/pages/contact.html
@@ -31,8 +31,7 @@
 
                 </div>
                 <div class="top-nav-icons">
-
-
+                    <a href="http://facebook.com" target="_blank"><img src="./../images/facebook.png" alt="facebook-icon" target="_blank"></a>
 
 
                 </div>
