anchor tag added img instagram added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="top-nav-icons">
                     <a href="http://facebook.com" target="_blank"><img src="./../images/facebook.png" alt="facebook-icon" target="_blank"></a>
-
+                    <a href="https://instagram.com" target="_blank"><img src="./../images/instagram.png" alt="instagram-icon"></a>
 
                 </div>
 
