anchor tag added img telegram

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -33,7 +33,7 @@
                 <div class="top-nav-icons">
                     <a href="http://facebook.com" target="_blank"><img src="./../images/facebook.png" alt="facebook-icon" target="_blank"></a>
                     <a href="https://instagram.com" target="_blank"><img src="./../images/instagram.png" alt="instagram-icon"></a>
-
+                    <a href="https://web.telegram.org" target="_blank"><img src="./../images/telegram.png" alt="telegram-icon"></a>
                 </div>
 
 
