anchor tag added img youtube

--- a/pages/culture.html
+++ b/pages/culture.html
@@ -26,14 +26,10 @@
                 </div>
                 <div>
                     <div class="top-nav-icons">
-                        <a href="http://facebook.com" target="_blank"><img src="./../images/facebook.png"
-                                alt="facebook-icon" target="_blank"></a>
-                        <a href="https://instagram.com" target="_blank"><img src="./../images/instagram.png"
-                                alt="instagram-icon"></a>
-                        <a href="https://web.telegram.org" target="_blank"><img src="./../images/telegram.png"
-                                alt="telegram-icon"></a>
-                        <a href="https://youtube.com" target="_blank"><img src="./../images/youtube.png"
-                                alt="youtube-icon"></a>
+                        <a href="http://facebook.com" target="_blank"><img src="./../images/facebook.png" alt="facebook-icon" target="_blank"></a>
+                        <a href="https://instagram.com" target="_blank"><img src="./../images/instagram.png" alt="instagram-icon"></a>
+                        <a href="https://web.telegram.org" target="_blank"><img src="./../images/telegram.png" alt="telegram-icon"></a>
+
                     </div>
                     <div class="top-nav-search-bar">
                         <input type="text" placeholder="Search news" />
@@ -67,7 +63,8 @@
                         <img src="./../images/cultural1.webp" alt="">
                         <div class="homepage-Card">
                             <h3>Tarun Tahiliani defends Olympic uniforms criticism.</h3>
-                            <p>Fashion designer Tarun Tahiliani has firmly defended the design of the Indian contingent's uniforms for the 2024 Paris Olympics, following widespread criticism. Despite social media backlash labelling the outfits as an "eyesore" and "mediocre," </p>
+                            <p>Fashion designer Tarun Tahiliani has firmly defended the design of the Indian contingent's uniforms for the 2024 Paris Olympics, following widespread criticism. Despite social media backlash labelling the outfits as an "eyesore"
+                                and "mediocre," </p>
                             <a href="">Read more</a>
                         </div>
                     </div>
@@ -75,7 +72,8 @@
                         <img src="./../images/cultural2.webp" alt="">
                         <div class="homepage-Card">
                             <h3>Pandit Tanmoy Bose honored with Sri Chinmoy Culture-Light Award</h3>
-                            <p>The biggest wedding of the year is just around the corner, and we can't keep calm and their wedding festivities have already begun, grabbing all the headlines.  From exquisite custom-made outfits to glamorous six yards, she has rocked every look to perfection</p>
+                            <p>The biggest wedding of the year is just around the corner, and we can't keep calm and their wedding festivities have already begun, grabbing all the headlines. From exquisite custom-made outfits to glamorous six yards, she
+                                has rocked every look to perfection</p>
                             <a href="">Read more</a>
                         </div>
                     </div>
@@ -83,7 +81,9 @@
                         <img src="./../images/cultural3.webp" alt="">
                         <div class="homepage-Card">
                             <h3>Celebrating tradition: Nita Ambani stuns in a Kasavu sari on ..</h3>
-                            <p>The biggest wedding of the year is just around the corner, and we can't keep calm. Anant Ambani and Radhika Merchant are all set to tie the knot on July 12, and their wedding festivities have already begun, grabbing all the headlines.</p>
+                            <p>The biggest wedding of the year is just around the corner, and we can't keep calm. Anant Ambani and Radhika Merchant are all set to tie the knot on July 12, and their wedding festivities have already begun, grabbing all the
+                                headlines.
+                            </p>
                             <a href="">Read more</a>
                         </div>
                     </div>
@@ -109,24 +109,19 @@
                         <div class="card">
                             <img src="./../images/cultural5.jpg" alt="">
                             <div class="homepage-Card">
-                                <h3>Amaan and Ayaan Ali Bangash on Ustad Amjad Ali Khan teaching and philosophy are
-                                    beyond music.
+                                <h3>Amaan and Ayaan Ali Bangash on Ustad Amjad Ali Khan teaching and philosophy are beyond music.
                                 </h3>
                                 <p>
-                                    Amaan and Ayaan Ali Bangash, sons of sarod maestro Ustad Amjad Ali Khan, are known
-                                    for their sarod duets. They also have successful solo careers.</p>
+                                    Amaan and Ayaan Ali Bangash, sons of sarod maestro Ustad Amjad Ali Khan, are known for their sarod duets. They also have successful solo careers.</p>
                                 <a href="">Read more</a>
                             </div>
                         </div>
                         <div class="card">
                             <img src="./../images/cultural6.jpg" alt="">
                             <div class="homepage-Card">
-                                <h3>Meet 11-yr-old Rock goddess who floored Americas Got Talent.
-                                    Americas Got Talent</h3>
+                                <h3>Meet 11-yr-old Rock goddess who floored Americas Got Talent. Americas Got Talent</h3>
                                 <p>
-                                    Americas Got Talent one of televisions biggest reality shows, seemed uncertain of
-                                    what to expect as she opened her routine with an intricate alaap in Natabhairavi a
-                                    grand devotional raga.</p>
+                                    Americas Got Talent one of televisions biggest reality shows, seemed uncertain of what to expect as she opened her routine with an intricate alaap in Natabhairavi a grand devotional raga.</p>
                                 <a href="">Read more</a>
                             </div>
                         </div>
