--- a/pages/contact.html
+++ b/pages/contact.html
@@ -34,6 +34,8 @@
                     <a href="http://facebook.com" target="_blank"><img src="./../images/facebook.png" alt="facebook-icon" target="_blank"></a>
                     <a href="https://instagram.com" target="_blank"><img src="./../images/instagram.png" alt="instagram-icon"></a>
                     <a href="https://web.telegram.org" target="_blank"><img src="./../images/telegram.png" alt="telegram-icon"></a>
+                    <a href="https://youtube.com" target="_blank"><img src="../images/youtube.png" alt="youtube-icon"></a>
+
                 </div>
 
 
