top-nav-search-bar added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -37,7 +37,7 @@
                     <a href="https://youtube.com" target="_blank"><img src="../images/youtube.png" alt="youtube-icon"></a>
 
                 </div>
-                <div>
+                <div class="top-nav-search-bar">
 
 
                 </div>
