input type added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -38,7 +38,7 @@
 
                 </div>
                 <div class="top-nav-search-bar">
-
+                    <input type="text" placeholder="Search news" />
 
                 </div>
 
