--- a/pages/contact.html
+++ b/pages/contact.html
@@ -39,6 +39,7 @@
                 </div>
                 <div class="top-nav-search-bar">
                     <input type="text" placeholder="Search news" />
+                    <img src="./../images/magnifying-glass.png" />
 
                 </div>
 
