--- a/pages/contact.html
+++ b/pages/contact.html
@@ -42,6 +42,11 @@
                     <img src="./../images/magnifying-glass.png" />
 
                 </div>
+                <div>
+
+
+
+                </div>
 
 
 
