anchor tag added world news

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -44,6 +44,7 @@
                 </div>
                 <div>
                     <ul class="nav-list">
+                        <li><a href="">world news</a></li>
 
 
 
