--- a/pages/contact.html
+++ b/pages/contact.html
@@ -45,7 +45,7 @@
                 <div>
                     <ul class="nav-list">
                         <li><a href="">world news</a></li>
-
+                        <li><a href="">Sports</a></li>
 
 
                 </div>
