anchor tag added tech

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -46,6 +46,7 @@
                     <ul class="nav-list">
                         <li><a href="">world news</a></li>
                         <li><a href="">Sports</a></li>
+                        <li><a href="">Tech</a></li>
 
 
                 </div>
