anchor tag added enteitment added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -47,8 +47,9 @@
                         <li><a href="">world news</a></li>
                         <li><a href="">Sports</a></li>
                         <li><a href="">Tech</a></li>
+                        <li><a href="">Entertainment</a></li>
 
-
+                    </ul>
                 </div>
 
 
