--- a/pages/contact.html
+++ b/pages/contact.html
@@ -48,6 +48,7 @@
                         <li><a href="">Sports</a></li>
                         <li><a href="">Tech</a></li>
                         <li><a href="">Entertainment</a></li>
+                        <li><a href="">Business</a></li>
 
                     </ul>
                 </div>
