--- a/pages/contact.html
+++ b/pages/contact.html
@@ -49,6 +49,7 @@
                         <li><a href="">Tech</a></li>
                         <li><a href="">Entertainment</a></li>
                         <li><a href="">Business</a></li>
+                        <li><a href="">Culture</a></li>
 
                     </ul>
                 </div>
