--- a/pages/contact.html
+++ b/pages/contact.html
@@ -50,6 +50,7 @@
                         <li><a href="">Entertainment</a></li>
                         <li><a href="">Business</a></li>
                         <li><a href="">Culture</a></li>
+                        <li><a href="">Education</a></li>
 
                     </ul>
                 </div>
