style tag addded

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -54,7 +54,7 @@
 
                 </ul>
             </div>
-            <h1>contact from #08</h1>
+            <h1 class="contact">contact from #08</h1>
 
 
         </nav>
