--- a/pages/contact.html
+++ b/pages/contact.html
@@ -55,6 +55,16 @@
                 </ul>
             </div>
             <h1 class="contact">contact from #08</h1>
+            <div>
+
+
+
+
+
+
+
+
+            </div>
 
 
         </nav>
