--- a/pages/contact.html
+++ b/pages/contact.html
@@ -56,6 +56,8 @@
             </div>
             <h1 class="contact">contact from #08</h1>
             <div>
+                <div>
+                </div>
 
 
 
