--- a/pages/contact.html
+++ b/pages/contact.html
@@ -56,7 +56,7 @@
             </div>
             <h1 class="contact">contact from #08</h1>
             <div>
-                <div>
+                <div class="container">
                 </div>
 
 
