--- a/pages/contact.html
+++ b/pages/contact.html
@@ -55,9 +55,18 @@
                 </ul>
             </div>
             <h1 class="contact">contact from #08</h1>
-            <div>
-                <div class="container">
+
+            <div class="container">
+                <div>
+
+
+
+
+
                 </div>
+
+
+            </div>
 
 
 
