location img added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -57,6 +57,7 @@
             <h1 class="contact">contact from #08</h1>
 
             <div class="container">
+                <img src="./../location.png">
                 <div>
 
 
