--- a/pages/contact.html
+++ b/pages/contact.html
@@ -57,7 +57,7 @@
             <h1 class="contact">contact from #08</h1>
 
             <div class="container">
-                <img src="./../location.png">
+                <img src="./../location.png " class="card">
                 <div>
 
 
