--- a/pages/contact.html
+++ b/pages/contact.html
@@ -57,14 +57,11 @@
             <h1 class="contact">contact from #08</h1>
 
             <div class="container">
-                <img src="./../location.png " class="card">
-                <div>
-
-
-
-
-
+                <div class="card">
+                    <img src="./../location.png " class="img">
+                    <h2>address</h2>
                 </div>
+            </div>
 
 
             </div>
