paragraph tag added class

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -60,7 +60,7 @@
                 <div class="card">
                     <img src="./../location.png " class="img">
                     <h2>address</h2>
-                    <p>198 west 21th street, suite 721 new york NY 10016</p>
+                    <p class="paragraph">198 west 21th street, suite 721 new york NY 10016</p>
                 </div>
             </div>
 
