--- a/pages/contact.html
+++ b/pages/contact.html
@@ -59,7 +59,7 @@
             <div class="container">
                 <div class="card">
                     <img src="./../location.png " class="img">
-                    <h2>address</h2>
+                    <h2 class="heading">address</h2>
                     <p class="paragraph">198 west 21th street, suite 721 new york NY 10016</p>
                 </div>
             </div>
