img src added phone

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -62,9 +62,8 @@
                     <h2 class="heading">address</h2>
                     <p class="paragraph">198 west 21th street, suite 721 new york NY 10016</p>
                 </div>
-                <div>
-
-                </div>
+                <div class="card">
+                    <img src="./../phone.png"></div>
             </div>
 
 
