--- a/pages/contact.html
+++ b/pages/contact.html
@@ -63,7 +63,10 @@
                     <p class="paragraph">198 west 21th street, suite 721 new york NY 10016</p>
                 </div>
                 <div class="card">
-                    <img src="./../phone.png"></div>
+                    <img src="./../phone.png" class="img">
+                    <h2>phone</h2>
+
+                </div>
             </div>
 
 
