paragraph added numbers

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -64,8 +64,10 @@
                 </div>
                 <div class="card">
                     <img src="./../phone.png" class="img">
-                    <h2>phone</h2>
-
+                    <h2 class="heading">phone</h2>
+                    <p>
+                        +1234 7865 00
+                    </p>
                 </div>
             </div>
 
