--- a/pages/contact.html
+++ b/pages/contact.html
@@ -65,9 +65,13 @@
                 <div class="card">
                     <img src="./../phone.png" class="img">
                     <h2 class="heading">phone</h2>
-                    <p>
+                    <p class="paragraph">
                         +1234 7865 00
                     </p>
+                </div>
+                <div>
+
+
                 </div>
             </div>
 
