img src added email

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -69,10 +69,8 @@
                         +1234 7865 00
                     </p>
                 </div>
-                <div>
-
-
-                </div>
+                <div class="card">
+                    <img src="./../email.png"></div>
             </div>
 
 
