new changes added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -59,18 +59,21 @@
             <div class="container">
                 <div class="card">
                     <img src="./../location.png " class="img">
-                    <h2 class="heading">address</h2>
+                    <h1 class="heading">address</h1>
                     <p class="paragraph">198 west 21th street, suite 721 new york NY 10016</p>
                 </div>
                 <div class="card">
                     <img src="./../phone.png" class="img">
-                    <h2 class="heading">phone</h2>
+                    <h1 class="heading">phone</h1>
                     <p class="paragraph">
                         +1234 7865 00
                     </p>
                 </div>
                 <div class="card">
-                    <img src="./../email.png"></div>
+                    <img src="./../email.png" class="img">
+                    <h1>Email</h1>
+
+                </div>
             </div>
 
 
