paragraph tag added email paragraph

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -72,6 +72,7 @@
                 <div class="card">
                     <img src="./../email.png" class="img">
                     <h1>Email</h1>
+                    <p>info@gamil.com</p>
 
                 </div>
             </div>
