--- a/pages/culture/cultural_news.html
+++ b/pages/culture/cultural_news.html
@@ -59,7 +59,7 @@
         <div class="homepage-content">
             <div class="homepage-Cards-container">
                 <div class="homepage-heading-details">
-                    <h1>The Indian cultural_News</h1>
+                    <h1>The Indian cultural News</h1>
                     <a href="" class="more-link">More +</a>
                 </div>
                 <div class="cards">
