heading atg added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -71,10 +71,18 @@
                 </div>
                 <div class="card">
                     <img src="./../email.png" class="img">
-                    <h1>Email</h1>
-                    <p>info@gamil.com</p>
-
+                    <h1 class="heading">Email</h1>
+                    <p class="paragraph">info@gamil.com</p>
                 </div>
+            </div>
+            <div>
+                <h1 class="contact">Get i touch with us</h1>
+
+
+
+
+                </form>
+
             </div>
 
 
