--- a/pages/contact.html
+++ b/pages/contact.html
@@ -78,9 +78,9 @@
             <div>
                 <h1 class="contact">Get i touch with us</h1>
 
+                <form>
 
-
-
+                </form>
                 </form>
 
             </div>
