--- a/pages/culture/cultural_news.html
+++ b/pages/culture/cultural_news.html
@@ -60,7 +60,6 @@
             <div class="homepage-Cards-container">
                 <div class="homepage-heading-details">
                     <h1>The Indian cultural News</h1>
-                    <a href="" class="more-link">More +</a>
                 </div>
                 <div class="cards">
                     <div class="card">
@@ -93,8 +92,7 @@
 
                 <div class="hompage-second-card-container">
                     <div class="homepage-heading-details">
-                        <h1>latest News</h1>
-                        <a href="" class="more-link">More +</a>
+                        <h1>latest Cultural News</h1>
                     </div>
 
                     <div class="cards">
@@ -140,11 +138,9 @@
                 <div class="sidebar-section">
                     <h2>Latest News</h2>
                     <div>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a>Tarun Tahiliani defends Olympic uniforms criticism..</a>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a>Pandit Tanmoy Bose honored with Sri Chinmoy Culture-Light Award.</a>
                         <hr>
                         <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
                             voluptatibus iure necessitatibus dicta.</a>
