--- a/pages/contact.html
+++ b/pages/contact.html
@@ -75,13 +75,13 @@
                     <p class="paragraph">info@gamil.com</p>
                 </div>
             </div>
-            <div>
-                <h1 class="contact">Get i touch with us</h1>
 
-                <form>
+            <h1 class="contact">Get i touch with us</h1>
 
-                </form>
-                </form>
+            <form class="form">
+                <label for="input full name"> Enter full name:</label>
+            </form>
+
 
             </div>
 
