input type added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -80,6 +80,8 @@
 
             <form class="form">
                 <label for="input full name"> Enter full name:</label>
+                <input type="text" id="input full name" /> <br/> <br/>
+
             </form>
 
 
