--- a/pages/contact.html
+++ b/pages/contact.html
@@ -82,6 +82,7 @@
                 <label for="input full name"> Enter full name:</label>
                 <input type="text" id="input full name" /> <br/> <br/>
 
+                <label for="input email">Enter email:</label>
                 <input type="email" id="input email" /> <br/> <br/>
 
 
