label & input added subject

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -79,14 +79,14 @@
             <h1 class="contact">Get i touch with us</h1>
 
             <form class="form">
-                <label for="input full name"> Enter full name:</label>
+                <label for="input full name">  Full name:</label>
                 <input type="text" id="input full name" /> <br/> <br/>
 
-                <label for="input email">Enter email:</label>
+                <label for="input email"> Email:</label>
                 <input type="email" id="input email" /> <br/> <br/>
 
-
-            </form>
+                <label for="input subject "> subject</label>
+                <input type="subject" id=" input subject" /> </form>
 
 
             </div>
