--- a/pages/contact.html
+++ b/pages/contact.html
@@ -86,7 +86,14 @@
                 <input type="email" id="input email" /> <br/> <br/>
 
                 <label for="input subject "> subject</label>
-                <input type="subject" id=" input subject" /> </form>
+                <input type="subject" id=" input subject" /><br/><br/>
+
+                <label for="input meassage">Message</label>
+                <input type="meassage" id="input message" /> </form>
+
+
+
+            </form>
 
 
             </div>
