input type send message added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -89,11 +89,9 @@
                 <input type="subject" id=" input subject" /><br/><br/>
 
                 <label for="input meassage">Message</label>
-                <input type="meassage" id="input message" /> </form>
+                <input type="meassage" id="input message" /><br/><br/>
 
-
-
-            </form>
+                <input type="text" placeholder="Send message" class="input" /> </form>
 
 
             </div>
