new changes added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -54,62 +54,49 @@
 
                 </ul>
             </div>
-            <h1 class="contact">contact from #08</h1>
-
-            <div class="container">
-                <div class="card">
-                    <img src="./../location.png " class="img">
-                    <h1 class="heading">address</h1>
-                    <p class="paragraph">198 west 21th street, suite 721 new york NY 10016</p>
-                </div>
-                <div class="card">
-                    <img src="./../phone.png" class="img">
-                    <h1 class="heading">phone</h1>
-                    <p class="paragraph">
-                        +1234 7865 00
-                    </p>
-                </div>
-                <div class="card">
-                    <img src="./../email.png" class="img">
-                    <h1 class="heading">Email</h1>
-                    <p class="paragraph">info@gamil.com</p>
-                </div>
-            </div>
-
-            <h1 class="contact">Get i touch with us</h1>
-
-            <form class="form">
-                <label for="input full name">  Full name:</label>
-                <input type="text" id="input full name" /> <br/> <br/>
-
-                <label for="input email"> Email:</label>
-                <input type="email" id="input email" /> <br/> <br/>
-
-                <label for="input subject "> subject</label>
-                <input type="subject" id=" input subject" /><br/><br/>
-
-                <label for="input meassage">Message</label>
-                <input type="meassage" id="input message" /><br/><br/>
-
-                <input type="text" placeholder="Send message" class="input" /> </form>
-
-
-            </div>
-
-
-            </div>
-
-
-
-
-
-
-
-
-            </div>
-
-
         </nav>
     </header>
+    <h1 class="contact">contact from #08</h1>
+
+    <div class="container">
+        <div class="card">
+            <img src="./../location.png " class="img">
+            <h1 class="heading">address</h1>
+            <p class="paragraph">198 west 21th street, suite 721 new york NY 10016</p>
+        </div>
+        <div class="card">
+            <img src="./../phone.png" class="img">
+            <h1 class="heading">phone</h1>
+            <p class="paragraph">
+                +1234 7865 00
+            </p>
+        </div>
+        <div class="card">
+            <img src="./../email.png" class="img">
+            <h1 class="heading">Email</h1>
+            <p class="paragraph">info@gamil.com</p>
+        </div>
+    </div>
+
+    <h1 class="contact">Get i touch with us</h1>
+
+    <form class="form">
+        <label for="input full name">  Full name:</label>
+        <input type="text" id="input full name" /> <br/> <br/>
+
+        <label for="input email"> Email:</label>
+        <input type="email" id="input email" /> <br/> <br/>
+
+        <label for="input subject "> subject</label>
+        <input type="subject" id=" input subject" /><br/><br/>
+
+        <label for="input meassage">Message</label>
+        <input type="meassage" id="input message" /><br/><br/>
+
+        <input type="text" placeholder="Send message" class="input" />
+    </form>
+    </div>
+    </div>
+</body>
 
 </html>
