footer section added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -97,6 +97,23 @@
     </form>
     </div>
     </div>
+
+    <!-- footer has been started from here -->
+    <footer>
+        <div class="footer-section">
+
+
+
+
+
+
+
+
+
+
+
+
+    </footer>
 </body>
 
 </html>
