--- a/pages/aboutusPage.html
+++ b/pages/aboutusPage.html
@@ -28,14 +28,10 @@
                 </div>
                 <div>
                     <div class="top-nav-icons">
-                        <a href="http://facebook.com" target="_blank"><img src="../images/facebook.png"
-                                alt="facebook-icon" target="_blank"></a>
-                        <a href="https://instagram.com" target="_blank"><img src="../images/instagram.png"
-                                alt="instagram-icon"></a>
-                        <a href="https://web.telegram.org" target="_blank"><img src="../images/telegram.png"
-                                alt="telegram-icon"></a>
-                        <a href="https://youtube.com" target="_blank"><img src="../images/youtube.png"
-                                alt="youtube-icon"></a>
+                        <a href="http://facebook.com" target="_blank"><img src="../images/facebook.png" alt="facebook-icon" target="_blank"></a>
+                        <a href="https://instagram.com" target="_blank"><img src="../images/instagram.png" alt="instagram-icon"></a>
+                        <a href="https://web.telegram.org" target="_blank"><img src="../images/telegram.png" alt="telegram-icon"></a>
+                        <a href="https://youtube.com" target="_blank"><img src="../images/youtube.png" alt="youtube-icon"></a>
                     </div>
                     <div class="search-and-bar">
                         <div class="top-nav-search-bar">
@@ -67,8 +63,7 @@
 
     <section class="hero-section">
         <div class="hero-content">
-            <h1>Welcome to the News Reporter
-                media company</h1>
+            <h1>Welcome to the News Reporter media company</h1>
             <a href="../index.html"><button>Read More</button></a>
         </div>
     </section>
@@ -78,29 +73,24 @@
     <div class="about-content-cards">
         <div class="about-content">
             <h2>Core Values</h2>
-            <p>Integrity, Excellence, Transparency, and Dedication are the pillars of our company. We stand by these
-                values to
-                deliver the best content.</p>
+            <p>Integrity, Excellence, Transparency, and Dedication are the pillars of our company. We stand by these values to deliver the best content.</p>
         </div>
 
         <div class="about-content">
             <h2>What We Do</h2>
-            <p>We cover a wide range of topics including World News, Sports, Technology, Entertainment, Business,
-                Culture, and
-                Education.</p>
+            <p>We cover a wide range of topics including World News, Sports, Technology, Entertainment, Business, Culture, and Education.
+            </p>
         </div>
 
         <div class="about-content">
             <h2>Testimonials</h2>
-            <p>The News Reporter is my go-to source for up-to-date and trustworthy news. Their reporting is
-                always on
-                point!</p>
+            <p>The News Reporter is my go-to source for up-to-date and trustworthy news. Their reporting is always on point!
+            </p>
         </div>
 
         <div class="about-content">
             <h2>Awards & Recognition</h2>
-            <p>We are committed to delivering exceptional journalism and making a significant contribution to the media
-                industry. </p>
+            <p>We are committed to delivering exceptional journalism and making a significant contribution to the media industry. </p>
 
         </div>
 
@@ -108,65 +98,61 @@
 
     <!-- footer has been started from here -->
 
-    <footer>
-        <div class="footer-section">
+    <!-- footer has been started from here -->
+    <div class="footer-section">
 
 
-            <div class="footer-nav-links">
-                <h3>Subscribe to our Newsletter</h3>
-                <form>
-                    <input type="email" name="email" placeholder="Your email" required>
-                    <input type="text" name="name" placeholder="Your name" required>
-                    <button type="submit">Subscribe</button>
-                </form>
-            </div>
-            <div class="footer-nav-links">
-                <h3>Links</h3>
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="">Contact</a></li>
-                    <li><a href="">Login</a></li>
-                </ul>
-            </div>
-            <div class="footer-nav-links">
-                <h3>Important Links</h3>
-                <ul>
-                    <li><a href="">world news</a></li>
-                    <li><a href="">Sports</a></li>
-                    <li><a href="">Tech</a></li>
-                    <li><a href="">Entertainment</a></li>
-                    <li><a href="">Business</a></li>
-                    <li><a href="">Culture</a></li>
-                    <li><a href="">Education</a></li>
-                </ul>
-            </div>
-            <div class="footer-nav-links">
-                <h3>Address</h3>
-                <ul>
-                    <li>4567 Shivaji Lane</li>
-                    <li>Chatrapati Nagar, Ward 12</li>
-                    <li>Nagpur, Maharashtra 440018
-                        India</li>
-                </ul>
-                <div class="footer-follow-us-Container">
-                    <h3>Follow Us</h3>
-                    <div class="top-nav-icons">
-                        <a href="http://facebook.com" target="_blank"><img src="../images/facebook.png"
-                                alt="facebook-icon" target="_blank"></a>
-                        <a href="https://instagram.com" target="_blank"><img src="../images/instagram.png"
-                                alt="instagram-icon"></a>
-                        <a href="https://web.telegram.org" target="_blank"><img src="../images/telegram.png"
-                                alt="telegram-icon"></a>
-                        <a href="https://youtube.com" target="_blank"><img src="../images/youtube.png"
-                                alt="youtube-icon"></a>
-                    </div>
+        <div class="footer-nav-links">
+            <h3>Subscribe to our Newsletter</h3>
+            <form>
+                <input type="email" name="email" placeholder="Your email" required>
+                <input type="text" name="name" placeholder="Your name" required>
+                <button type="submit">Subscribe</button>
+            </form>
+        </div>
+        <div class="footer-nav-links">
+            <h3>Links</h3>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">Login</a></li>
+            </ul>
+        </div>
+        <div class="footer-nav-links">
+            <h3>Important Links</h3>
+            <ul>
+                <li><a href="">world news</a></li>
+                <li><a href="">Sports</a></li>
+                <li><a href="">Tech</a></li>
+                <li><a href="">Entertainment</a></li>
+                <li><a href="">Business</a></li>
+                <li><a href="">Culture</a></li>
+                <li><a href="">Education</a></li>
+            </ul>
+        </div>
+        <div class="footer-nav-links">
+            <h3>Address</h3>
+            <ul>
+                <li>4567 Shivaji Lane</li>
+                <li>Chatrapati Nagar, Ward 12</li>
+                <li>Nagpur, Maharashtra 440018 India
+                </li>
+            </ul>
+            <div class="footer-follow-us-Container">
+                <h3>Follow Us</h3>
+                <div class="top-nav-icons">
+                    <a href="http://facebook.com" target="_blank"><img src="../images/facebook.png" alt="facebook-icon" target="_blank"></a>
+                    <a href="https://instagram.com" target="_blank"><img src="../images/instagram.png" alt="instagram-icon"></a>
+                    <a href="https://web.telegram.org" target="_blank"><img src="../images/telegram.png" alt="telegram-icon"></a>
+                    <a href="https://youtube.com" target="_blank"><img src="../images/youtube.png" alt="youtube-icon"></a>
                 </div>
             </div>
         </div>
-        <div class="footer-copyright-section">
-            <p>Copyright © 2024 The News Reporter. All rights reserved | Design by ICP-9.0 Group 9 </p>
-        </div>
+    </div>
+    <div class="footer-copyright-section">
+        <p>Copyright © 2024 The News Reporter. All rights reserved | Design by ICP-9.0 Group 9 </p>
+    </div>
     </footer>
 
     <!-- footer has been ended here -->
