content added in 1st card

--- a/pages/Education/card1.html
+++ b/pages/Education/card1.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="../../CSS/education.css" rel="stylesheet">
 </head>
-<body>
-      <!-- started here navbar -->
 
-      <header>
+<body>
+    <!-- started here navbar -->
+
+    <header>
         <nav>
             <div class="top-navbar">
                 <div>
@@ -55,5 +57,51 @@
             </div>
         </nav>
     </header>
+    <!--Read More content started-->
+    <div class="readmore-heading-details">
+        <a href="card1.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
+        <h1>The AI Advantage in Teaching and Learning</h1>
+    </div>
+
+    <div class="img_container">
+        <img src="./../../images/ai.avif" alt="Adani Business" class="front_img" />
+        <div class="information_block">
+            Soumitra Dutta:  AI can help in many different ways in helping students enhance the learning
+            experience. The most important one is, of course, in personalizing the quality of what they learn and how
+            they learn.
+            <br><br>
+            It’s also important to keep in mind that students have different career objectives. They have
+            different skill requirements for the careers they choose, and AI can help customize the kind of skills and
+            kind of study areas they focus on for their chosen career areas.
+            <br><br>
+           AI can also help in connecting students to each other. Let’s say a student has a need in some
+            certain section of an assignment. Other sections that student has probably done well and other students have
+            performed well in those sections can be connected to the student much more easily using AI.
+            <br><br><br>
+            <b>AI can help faculty in understanding the learning needs of each student, and customizing the curriculum
+                to the needs of every single student.
+            </b>
+            <br><br>
+             Faculty need to then think about how to combine the content into a proper, effective course
+            curriculum. Once again, AI can actually help in creating the best course curriculum by helping combine the
+            different modules in an effective manner.
+
+             Faculty need to think about how to translate that course curriculum to the students’ needs. How do
+            you actually make students learn through the curriculum? As you do so, you need to be able to make sure the
+            curriculum at least addresses the individual learning needs of every student to the degree possible.
+
+             AI can once again help the faculty member in understanding the needs, the learning needs of each
+            student, and customizing the curriculum to the needs of every single student.
+
+             And, of course, you can look at a post-course situation where the alumni of the course want to be
+            sort of updated on the recent developments in that area, connect with other colleagues in the area with what
+            work they’re doing.
+
+            So, once again, AI can help keep the community alive and network with each other. So everywhere,
+            actually, AI is there in what the faculty does.
+        </div>
+    </div>
+
 </body>
+
 </html>
