heading three added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -103,6 +103,7 @@
         <div class="footer-section">
 
             <div class="footer-nav-links">
+                <h3>Subscribe to our Newsletter</h3>
 
 
 
