form tag addded input box

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -104,7 +104,11 @@
 
             <div class="footer-nav-links">
                 <h3>Subscribe to our Newsletter</h3>
-
+                <form>
+                    <input type="email" name="email" placeholder="Your email" required>
+                    <input type="text" name="name" placeholder="Your name" required>
+                    <button type="submit">Subscribe</button>
+                </form>
 
 
 
