--- a/pages/contact.html
+++ b/pages/contact.html
@@ -109,8 +109,8 @@
                     <input type="text" name="name" placeholder="Your name" required>
                     <button type="submit">Subscribe</button>
                 </form>
-
-
+            </div>
+            <div class="footer-nav-links">
 
 
 
