heading & linking added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -111,7 +111,14 @@
                 </form>
             </div>
             <div class="footer-nav-links">
-
+                <h3>Links</h3>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="./pages/aboutusPage.html">About</a></li>
+                    <li><a href="">Contact</a></li>
+                    <li><a href="">Login</a></li>
+                </ul>
+            </div>
 
 
 
