--- a/pages/contact.html
+++ b/pages/contact.html
@@ -119,7 +119,18 @@
                     <li><a href="">Login</a></li>
                 </ul>
             </div>
-
+            <div class="footer-nav-links">
+                <h3>Important Links</h3>
+                <ul>
+                    <li><a href="">world news</a></li>
+                    <li><a href="">Sports</a></li>
+                    <li><a href="">Tech</a></li>
+                    <li><a href="">Entertainment</a></li>
+                    <li><a href="">Business</a></li>
+                    <li><a href="">Culture</a></li>
+                    <li><a href="">Education</a></li>
+                </ul>
+            </div>
 
 
 
