div tag address info added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -131,7 +131,14 @@
                     <li><a href="">Education</a></li>
                 </ul>
             </div>
-
+            <div class="footer-nav-links">
+                <h3>Address</h3>
+                <ul>
+                    <li>4567 Shivaji Lane</li>
+                    <li>Chatrapati Nagar, Ward 12</li>
+                    <li>Nagpur, Maharashtra 440018 India
+                    </li>
+                </ul>
 
 
 
