footer container added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -139,11 +139,6 @@
                     <li>Nagpur, Maharashtra 440018 India
                     </li>
                 </ul>
-
-
-
-
-    </footer>
-</body>
+                <div class="footer-follow-us-Container">
 
 </html>
