--- a/pages/contact.html
+++ b/pages/contact.html
@@ -140,5 +140,6 @@
                     </li>
                 </ul>
                 <div class="footer-follow-us-Container">
+                    <h3>Follow Us</h3>
 
 </html>
