--- a/pages/contact.html
+++ b/pages/contact.html
@@ -141,5 +141,9 @@
                 </ul>
                 <div class="footer-follow-us-Container">
                     <h3>Follow Us</h3>
+                    <div class="top-nav-icons">
+                        <a href="http://facebook.com" target="_blank"><img src=".././../images/facebook.png" alt="facebook-icon" target="_blank"></a>
+
+
 
 </html>
