--- a/pages/contact.html
+++ b/pages/contact.html
@@ -142,8 +142,8 @@
                 <div class="footer-follow-us-Container">
                     <h3>Follow Us</h3>
                     <div class="top-nav-icons">
-                        <a href="http://facebook.com" target="_blank"><img src=".././../images/facebook.png" alt="facebook-icon" target="_blank"></a>
-
+                        <a href="http://facebook.com" target="_blank"><img src="../images/facebook.png" alt="facebook-icon" target="_blank"></a>
+                        <a href="https://instagram.com" target="_blank"><img src="../images/instagram.png" alt="instagram-icon"></a>
 
 
 </html>
