--- a/pages/contact.html
+++ b/pages/contact.html
@@ -150,5 +150,8 @@
                 </div>
             </div>
         </div>
+        <div class="footer-copyright-section">
+            <p>Copyright © 2024 The News Reporter. All rights reserved | Design by ICP-9.0 Group 9 </p>
+        </div>
 
 </html>
