--- a/pages/contact.html
+++ b/pages/contact.html
@@ -153,5 +153,6 @@
         <div class="footer-copyright-section">
             <p>Copyright © 2024 The News Reporter. All rights reserved | Design by ICP-9.0 Group 9 </p>
         </div>
+    </footer>
 
 </html>
