new changes added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -145,7 +145,7 @@
                         <a href="http://facebook.com" target="_blank"><img src="../images/facebook.png" alt="facebook-icon" target="_blank"></a>
                         <a href="https://instagram.com" target="_blank"><img src="../images/instagram.png" alt="instagram-icon"></a>
                         <a href="https://web.telegram.org" target="_blank"><img src="../images/telegram.png" alt="telegram-icon"></a>
-                        <a href="https://youtube.com" target="_blank"><img src=".././../images/youtube.png" alt="youtube-icon"></a>
+                        <a href="https://youtube.com" target="_blank"><img src="../images/youtube.png" alt="youtube-icon"></a>
                     </div>
                 </div>
             </div>
@@ -154,5 +154,6 @@
             <p>Copyright © 2024 The News Reporter. All rights reserved | Design by ICP-9.0 Group 9 </p>
         </div>
     </footer>
+</body>
 
 </html>
