--- a/pages/Education/education.html
+++ b/pages/Education/education.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> Education </title>
+    <title> The News Reporter</title>
     <link href="../../CSS/education.css" rel="stylesheet">
 </head>
 <body>
@@ -67,7 +67,7 @@
                         <div class="homepage-Card">
                             <h3>The AI Advantage in Teaching and Learning</h3>
                             <p>By leveraging AI, educators can enhance their curricula, foster peer collaboration, and prepare students for AI-driven careers</p>
-                            <a href="">Read more</a>
+                            <a href="card1.html">Read more</a>
                         </div>
                     </div>
                     <div class="card">
@@ -223,13 +223,13 @@
                 <div class="footer-follow-us-Container">
                     <h3>Follow Us</h3>
                     <div class="top-nav-icons">
-                        <a href="http://facebook.com" target="_blank"><img src="./images/facebook.png"
+                        <a href="http://facebook.com" target="_blank"><img src="../../images/facebook.png"
                                 alt="facebook-icon" target="_blank"></a>
-                        <a href="https://instagram.com" target="_blank"><img src="./images/instagram.png"
+                        <a href="https://instagram.com" target="_blank"><img src="../../images/instagram.png"
                                 alt="instagram-icon"></a>
-                        <a href="https://web.telegram.org" target="_blank"><img src="./images/telegram.png"
+                        <a href="https://web.telegram.org" target="_blank"><img src="../../images/telegram.png"
                                 alt="telegram-icon"></a>
-                        <a href="https://youtube.com" target="_blank"><img src="./images/youtube.png"
+                        <a href="https://youtube.com" target="_blank"><img src="../../images/youtube.png"
                                 alt="youtube-icon"></a>
                     </div>
                 </div>
