content added in card2 page

--- a/pages/Education/card1.html
+++ b/pages/Education/card1.html
@@ -63,12 +63,11 @@
         <h1>The AI Advantage in Teaching and Learning</h1>
     </div>
        <div class="d-t">
-         Date : Fri , Aug 16 <br>
-         Time : 7:00pm
+         Date : Fri , Aug 16 
        </div> 
        <br>
     <div class="img_container">
-        <img src="./../../images/ai.avif" alt="Adani Business" class="front_img" />
+        <img src="./../../images/ai.avif" alt="Ai-img" class="front_img" />
         <div class="information_block">
             Soumitra Dutta:  AI can help in many different ways in helping students enhance the learning
             experience. The most important one is, of course, in personalizing the quality of what they learn and how
