--- a/pages/Education/card2.html
+++ b/pages/Education/card2.html
@@ -1,59 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The News Reporter</title>
     <link href="../../CSS/education.css" rel="stylesheet">
 </head>
-<body>
-        <!-- started here navbar -->
 
-        <header>
-            <nav>
-                <div class="top-navbar">
-                    <div>
-                        <h4>The</h4>
-                        <h2><span class="heading-fisrt">News</span> Reporter</h2>
-                    </div>
-                    <div>
-                        <ul class="top-nav-list">
-                            <li><a href="./../../index.html">Home</a></li>|
-                            <li><a href="./../aboutusPage.html">About</a></li>|
-                            <li><a href="">Contact</a></li>|
-                            <li><a href="">Login</a></li>
-                        </ul>
-                    </div>
-                    <div>
-                        <div class="top-nav-icons">
-                            <a href="http://facebook.com" target="_blank"><img src="./../../images/facebook.png"
-                                    alt="facebook-icon" target="_blank"></a>
-                            <a href="https://instagram.com" target="_blank"><img src="./../../images/instagram.png"
-                                    alt="instagram-icon"></a>
-                            <a href="https://web.telegram.org" target="_blank"><img src="./../../images/telegram.png"
-                                    alt="telegram-icon"></a>
-                            <a href="https://youtube.com" target="_blank"><img src="./../../images/youtube.png"
-                                    alt="youtube-icon"></a>
-                        </div>
-                        <div class="top-nav-search-bar">
-                            <input type="text" placeholder="Search news" />
-                            <img src="./../../images/magnifying-glass.png" />
-                        </div>
-                    </div>
-                </div>
-    
+<body>
+    <!-- started here navbar -->
+
+    <header>
+        <nav>
+            <div class="top-navbar">
                 <div>
-                    <ul class="nav-list">
-                        <li><a href="">world news</a></li>
-                        <li><a href="">Sports</a></li>
-                        <li><a href="./../tech/tech.html">Tech</a></li>
-                        <li><a href="">Entertainment</a></li>
-                        <li><a href="">Business</a></li>
-                        <li><a href="">Culture</a></li>
-                        <li><a href="">Education</a></li>
+                    <h4>The</h4>
+                    <h2><span class="heading-fisrt">News</span> Reporter</h2>
+                </div>
+                <div>
+                    <ul class="top-nav-list">
+                        <li><a href="./../../index.html">Home</a></li>|
+                        <li><a href="./../aboutusPage.html">About</a></li>|
+                        <li><a href="">Contact</a></li>|
+                        <li><a href="">Login</a></li>
                     </ul>
                 </div>
-            </nav>
-        </header>
+                <div>
+                    <div class="top-nav-icons">
+                        <a href="http://facebook.com" target="_blank"><img src="./../../images/facebook.png"
+                                alt="facebook-icon" target="_blank"></a>
+                        <a href="https://instagram.com" target="_blank"><img src="./../../images/instagram.png"
+                                alt="instagram-icon"></a>
+                        <a href="https://web.telegram.org" target="_blank"><img src="./../../images/telegram.png"
+                                alt="telegram-icon"></a>
+                        <a href="https://youtube.com" target="_blank"><img src="./../../images/youtube.png"
+                                alt="youtube-icon"></a>
+                    </div>
+                    <div class="top-nav-search-bar">
+                        <input type="text" placeholder="Search news" />
+                        <img src="./../../images/magnifying-glass.png" />
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <ul class="nav-list">
+                    <li><a href="">world news</a></li>
+                    <li><a href="">Sports</a></li>
+                    <li><a href="./../tech/tech.html">Tech</a></li>
+                    <li><a href="">Entertainment</a></li>
+                    <li><a href="">Business</a></li>
+                    <li><a href="">Culture</a></li>
+                    <li><a href="">Education</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <!--Read More content started-->
+    <div class="readmore-heading-details">
+        <a href="education.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
+        <h1>CBSE elaborates guidelines for children with special needs</h1>
+    </div>
+    <div class="d-t">
+        Date : Fri , Aug 16
+    </div>
+    <br>
+    <div class="img_container">
+        <img src="./../../images/cbsc.avif" alt="CBSE-news" class="front_img" />
+        <div class="information_block">
+            The Central Board of Secondary Education (CBSE) in an official notice to all the Heads and Managers of the
+            schools affiliated with the Board, issued a set of guidelines for Children with Special Needs (CwSN).
+            <br>
+            The Board released the guidelines and advised all CBSE affiliated schools and the schools seeking
+            affiliation with the Board to comply with the revised guidelines for Children with Special Needs (CwSN)
+            <br>
+            “The Board has been receiving written requests from schools and discussion points in various forums of the
+            Board's stakeholders to optimize the guidelines on the provisions for CwSN students studying in the
+            schools,” mentioned the official notice.
+
+            Also Read: CBSE strongly advises schools to follow NCERT textbooks, issues new guidelines
+
+            The revised guidelines specify about the ramp, signage, lifts and toilets for Children with Special Needs
+            (CwSN).
+
+            As per the revised guidelines, a proper ramp should mandatorily be constructed on the ground floor of the
+            school for barrier-free access and separate CwSN-compliant toilets for boys and girls with adequate space
+            for movement of the Wheel Chair / Walker should be maintained on the ground floor or on any other floors on
+            which the School is conducting the classes/practicals for CwSN candidates.
+
+ </div>
+    </div>
 </body>
+
 </html>
