--- a/pages/Education/education.html
+++ b/pages/Education/education.html
@@ -76,7 +76,7 @@
                         <div class="homepage-Card">
                             <h3>CBSE elaborates guidelines for children with special needs</h3>
                             <p>CBSE in official notice to all the Heads and Managers of the schools affiliated with the Board, issued a set of guidelines for Children with Needs.</p>
-                            <a href="">Read more</a>
+                            <a href="card2.html">Read more</a>
                         </div>
                     </div>
                     <div class="card">
@@ -85,7 +85,7 @@
                         <div class="homepage-Card">
                             <h3>PM Modi: No need for youth to study abroad with new education system.</h3>
                             <p>PM Modi said his government wants to build such an education system in the country so that youngsters need not have to go abroad for studies.</p>
-                            <a href="">Read more</a>
+                            <a href="card3.html">Read more</a>
                         </div>
                     </div>
                 </div>
